Version: 1.4.2

  GUI:
    - Improve max-zoom message and add tooltips for camera settings.
  Bugfixes:
    - Fix (default) shortcut key sequence.
    - Make sure the zoom level is adjusted when resolution changes to keep the same area in the screenshots.
      Note: Be careful when to change resolution, as this will abort/mess up any smooth camera movement that is active!

---------------------------------------------------------------------------------------------------
Version: 1.4.1
Date: 21-03-2021
  Bugfixes:
    - Do not take vehicles into account for base size calculation. (Thanks fortysixandtwo)

---------------------------------------------------------------------------------------------------
Version: 1.4.0
Date: 08-02-2021
  Features:
    - Configurable surface for each camera (when multiple surfaces are available).
      Hint: The 'Area Tracker' seems most suitable for small surfaces, as used in for example Factorissimo2.
    - Configurable surface for each tracker (when multiple surfaces are available).
    - Camera only uses trackers on same surface.
  Minor Features:
    - Add toggle/shortcut to pause all cameras.

---------------------------------------------------------------------------------------------------
Version: 1.3.1
Date: 31-01-2021
  Bugfixes:
    - Fix crash due to script changing the settings.

---------------------------------------------------------------------------------------------------
Version: 1.3.0
Date: 05-01-2021
  Features:
    - Updated to Factorio 1.1

---------------------------------------------------------------------------------------------------
Version: 1.2.2
Date: 10-10-2020
  Minor Features:
    - Warn player(s) to enable camera on first (mod) start.
  Gui:
    - Make GUI more clear/consistent:
      - Use one sprite for a button (don't toggle on state anymore).
      - Use disabled sprite-buttons for disabled buttons (instead of regular sprites).
      - Hide some disabled buttons.